fix: Stop navbar from stretching the page
The navbar would cause the page to be wider than the viewport, so I removed
margins and padding from it  so it fit properly.

--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -148,6 +148,11 @@ body
     color: grey;
 }
 
+.no-padding {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 .no-bottom-margin
 {
     margin-bottom: 0 !important;
@@ -158,6 +163,11 @@ body
     width: 100%;
     position: relative;
     border-width: 1px !important;
+}
+
+.navigation-row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 
